[package]
name = "C-Primer-Plus"
version = "0.1.0"
authors = ["ssfdust <ssfdust@gmail.com>"]
edition = "2018"

[dependencies]
promptly = "0.1.5"
text_io = "0.1.7"

[[bin]]
name = "macro"
path = "src/macro.rs"

[[bin]]
name = "6_6"
path = "Chapter_06/6.rs"

[[bin]]
name = "6_7"
path = "Chapter_06/7.rs"

[[bin]]
name = "6_8"
path = "Chapter_06/8.rs"

[[bin]]
name = "6_9"
path = "Chapter_06/9.rs"

[[bin]]
name = "6_10"
path = "Chapter_06/10.rs"

